--- a/src/Gui/ComputationInputTab.fxml
+++ b/src/Gui/ComputationInputTab.fxml
@@ -18,7 +18,7 @@
         <Font name="System Bold" size="13.0" fx:id="x1" />
       </font>
     </Label>
-    <ListView fx:id="setAList" focusTraversable="true" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="130.0" style="-fx-background-insets: 0;&#10;" GridPane.columnIndex="0" GridPane.rowIndex="1">
+    <ListView fx:id="setAList" focusTraversable="true" maxWidth="1.7976931348623157E308" onKeyReleased="#setAListKeyTyped" prefHeight="-1.0" prefWidth="130.0" style="-fx-background-insets: 0;&#10;" GridPane.columnIndex="0" GridPane.rowIndex="1">
       <tooltip>
         <Tooltip text="Each time series in input set A will be cross correlated with each time series in input set B.&#10;Double clicking on a time series removes it." fx:id="inputSetToolTip" />
       </tooltip>
@@ -30,7 +30,7 @@
       </tooltip>
     </ListView>
     <Label alignment="CENTER_LEFT" font="$x1" maxWidth="1.7976931348623157E308" prefWidth="300.0" text="Correlation Input Set B" textFill="#4333ff" GridPane.columnIndex="4" GridPane.rowIndex="0" />
-    <ListView fx:id="setBList" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="130.0" style="-fx-background-insets: 0;" tooltip="$inputSetToolTip" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+    <ListView fx:id="setBList" maxWidth="1.7976931348623157E308" onKeyReleased="#setBListKeyTyped" prefHeight="-1.0" prefWidth="130.0" style="-fx-background-insets: 0;" tooltip="$inputSetToolTip" GridPane.columnIndex="4" GridPane.rowIndex="1" />
     <VBox alignment="TOP_CENTER" disable="false" fillWidth="true" prefHeight="223.0" prefWidth="101.0" spacing="3.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
       <children>
         <Label contentDisplay="LEFT" text="load">
@@ -113,7 +113,7 @@
     </VBox>
     <BorderPane prefHeight="103.0" prefWidth="180.0" GridPane.columnIndex="6" GridPane.rowIndex="1">
       <bottom>
-        <Button id="openFileButton" fx:id="runButton" alignment="BOTTOM_CENTER" defaultButton="true" disable="false" font="$x2" mnemonicParsing="false" onAction="#compute" prefHeight="18.0" prefWidth="130.0" text="Run" textAlignment="LEFT" wrapText="false" BorderPane.alignment="CENTER" />
+        <Button id="openFileButton" fx:id="runButton" alignment="BOTTOM_CENTER" cancelButton="false" defaultButton="true" disable="true" font="$x2" mnemonicParsing="false" onAction="#compute" prefHeight="18.0" prefWidth="130.0" text="Run" textAlignment="LEFT" wrapText="false" BorderPane.alignment="CENTER" />
       </bottom>
       <center>
         <VBox alignment="TOP_LEFT" prefHeight="80.0" prefWidth="341.0" spacing="10.0" BorderPane.alignment="TOP_LEFT">
@@ -126,7 +126,7 @@
                 <ToggleGroup fx:id="nanStrategy" />
               </toggleGroup>
             </RadioButton>
-            <RadioButton id="characterSeparatorRadio" fx:id="nanLeaveRadio" alignment="TOP_LEFT" contentDisplay="RIGHT" font="$x3" graphicTextGap="20.0" mnemonicParsing="false" prefWidth="-1.0" selected="false" text="Leave" toggleGroup="$nanStrategy" underline="false" />
+            <RadioButton id="characterSeparatorRadio" fx:id="nanLeaveRadio" alignment="TOP_LEFT" contentDisplay="RIGHT" disable="true" font="$x3" graphicTextGap="20.0" mnemonicParsing="false" prefWidth="-1.0" selected="false" text="Leave" toggleGroup="$nanStrategy" underline="false" />
           </children>
           <padding>
             <Insets top="5.0" />
@@ -138,17 +138,17 @@
       </padding>
     </BorderPane>
     <Label alignment="CENTER_LEFT" prefWidth="544.0" text="Handle NaN Values" GridPane.columnIndex="6" GridPane.rowIndex="0" />
-    <Label alignment="CENTER_LEFT" prefWidth="544.0" text="Limits" GridPane.columnIndex="5" GridPane.rowIndex="0" />
+    <Label alignment="CENTER_LEFT" prefWidth="544.0" text="Limits" underline="false" visible="false" GridPane.columnIndex="5" GridPane.rowIndex="0" />
     <GridPane GridPane.columnIndex="5" GridPane.rowIndex="1">
       <children>
-        <Label contentDisplay="RIGHT" text="Time lag min" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="0">
+        <Label contentDisplay="RIGHT" text="Time lag min" visible="false" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="0">
           <tooltip>
             <Tooltip text="Defines the lower limit of the time lag range to compute in each window." />
           </tooltip>
         </Label>
-        <TextField id="windowSizeText" fx:id="timeLagMinText" alignment="TOP_RIGHT" prefWidth="45.0" text="-10" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-        <TextField id="windowSizeText" fx:id="timeLagMaxText" alignment="TOP_RIGHT" prefWidth="45.0" text="10" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-        <Label contentDisplay="RIGHT" text="max" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+        <TextField id="windowSizeText" fx:id="timeLagMinText" alignment="TOP_RIGHT" prefWidth="45.0" text="-10" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+        <TextField id="windowSizeText" fx:id="timeLagMaxText" alignment="TOP_RIGHT" prefWidth="45.0" text="10" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <Label contentDisplay="RIGHT" text="max" visible="false" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
           <tooltip>
             <Tooltip text="Defines the upper limit of the time lag range to compute in each window." />
           </tooltip>
@@ -181,7 +181,7 @@
     <ColumnConstraints maxWidth="543.0" minWidth="150.0" prefWidth="200.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="22.0" prefHeight="22.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="149.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="22.0" prefHeight="16.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="103.0" vgrow="SOMETIMES" />
   </rowConstraints>
 </GridPane>
