Faster rendering of the correlogram: Avoiding sub-pixel draw operations, applying clipping, highlighting active windows doesn't require rendering the correlogram again.

--- a/src/Gui/MainWindow.fxml
+++ b/src/Gui/MainWindow.fxml
@@ -7,59 +7,41 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Text?>
 <StackPane minHeight="600.0" minWidth="800.0" prefHeight="768.0" prefWidth="1024.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.MainWindowController">
-    <SplitPane dividerPositions="0.1919060052219321, 0.5757180156657964" focusTraversable="true" orientation="VERTICAL"
-               prefHeight="200.0" prefWidth="160.0">
-        <AnchorPane fx:id="inputPane" minHeight="0.0" prefHeight="144.0" prefWidth="1022.0"
-                    style="-fx-background-color: gainsboro;">
-            <Text layoutX="-39.0" layoutY="55.0" rotate="270.0" strokeType="OUTSIDE" strokeWidth="0.0"
-                  text="Input Selection" translateX="0.0"/>
-            <StackPane minHeight="0.0" prefHeight="165.0" visible="true" AnchorPane.bottomAnchor="0.0"
-                       AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                <TabPane fx:id="inputTabPane" minHeight="0.0" prefHeight="165.0" prefWidth="200.0" rotateGraphic="false"
-                         style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="26.0"
-                         tabMinHeight="0.0">
-                    <Tab closable="false" style="" text="Available in File">
-                        <fx:include fx:id="fileInput" source="FileInputTab.fxml" alignment="TOP_LEFT"/>
-                    </Tab>
-                    <Tab closable="false" text="Computation Input">
-                        <fx:include fx:id="computationInput" source="ComputationInputTab.fxml" alignment="TOP_LEFT"/>
-                    </Tab>
-                </TabPane>
-                <StackPane fx:id="progressPane" disable="false" minHeight="0.0" opacity="1.0" prefHeight="200.0"
-                           prefWidth="200.0" style="-fx-background-color: rgba(0,0,0,0.5);" visible="false">
-                    <StackPane prefHeight="40.0" prefWidth="446.0" visible="true" StackPane.alignment="CENTER">
-                        <ProgressBar fx:id="progressBar" maxHeight="40.0" prefHeight="40.0" prefWidth="500.0"
-                                     progress="0.0"/>
-                        <Label fx:id="progressLabel" alignment="CENTER" contentDisplay="RIGHT"
-                               prefHeight="40.000099999997474" prefWidth="500.0"
-                               text="Loading file contents...&#10;1 of 100" StackPane.alignment="CENTER"/>
-                    </StackPane>
-                    <Button fx:id="progressCancelButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0"
-                            text="Cancel" translateY="40.0" StackPane.alignment="CENTER"/>
-                </StackPane>
-            </StackPane>
-        </AnchorPane>
-
-        <!--Time Series View-->
-
-        <AnchorPane prefHeight="-1.0" prefWidth="200.0" style="-fx-background-color: gainsboro;">
-            <Text rotate="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time Series View" translateX="0.0"
-                  AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-45.0" AnchorPane.topAnchor="50.0"/>
-            <fx:include fx:id="timeSeriesView" source="../Visualization/TimeSeriesView.fxml"
-                        AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0"
-                        AnchorPane.topAnchor="0.0"/>
-        </AnchorPane>
-
-        <!--Correlogram View-->
-
-        <AnchorPane prefHeight="-1.0" prefWidth="200.0" style="-fx-background-color: gainsboro;">
-            <Text fontSmoothingType="GRAY" rotate="270.0" smooth="true" strikethrough="false" strokeType="OUTSIDE"
-                  strokeWidth="0.0" text="Correlation View" translateX="0.0" AnchorPane.bottomAnchor="0.0"
-                  AnchorPane.leftAnchor="-45.0" AnchorPane.topAnchor="50.0"/>
-            <fx:include fx:id="correlationView" source="../Visualization/Correlogram.fxml" AnchorPane.bottomAnchor="0.0"
-                        AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
-        </AnchorPane>
-    </SplitPane>
+  <SplitPane dividerPositions="0.1919060052219321, 0.5757180156657964" focusTraversable="true" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
+    <AnchorPane fx:id="inputPane" minHeight="0.0" prefHeight="144.0" prefWidth="1022.0" style="-fx-background-color: gainsboro;">
+      <Text layoutX="-39.0" layoutY="55.0" rotate="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Input Selection" translateX="0.0" />
+      <StackPane minHeight="0.0" prefHeight="165.0" visible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <TabPane fx:id="inputTabPane" minHeight="0.0" prefHeight="165.0" prefWidth="200.0" rotateGraphic="false" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="26.0" tabMinHeight="0.0">
+          <Tab closable="false" style="" text="Available in File">
+            <fx:include fx:id="fileInput" source="FileInputTab.fxml" alignment="TOP_LEFT" />
+          </Tab>
+          <Tab closable="false" text="Computation Input">
+            <fx:include fx:id="computationInput" source="ComputationInputTab.fxml" alignment="TOP_LEFT" />
+          </Tab>
+          <Tab text="Computation Output">
+              <fx:include fx:id="computationOutput" source="ComputationOutputTab.fxml"/>
+          </Tab>
+        </TabPane>
+        <StackPane fx:id="progressPane" disable="false" minHeight="0.0" opacity="1.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: rgba(0,0,0,0.5);" visible="false">
+          <StackPane prefHeight="40.0" prefWidth="446.0" visible="true" StackPane.alignment="CENTER">
+            <ProgressBar fx:id="progressBar" maxHeight="40.0" prefHeight="40.0" prefWidth="500.0" progress="0.0" />
+            <Label fx:id="progressLabel" alignment="CENTER" contentDisplay="RIGHT" prefHeight="40.000099999997474" prefWidth="500.0" text="Loading file contents...&#10;1 of 100" StackPane.alignment="CENTER" />
+          </StackPane>
+          <Button fx:id="progressCancelButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Cancel" translateY="40.0" StackPane.alignment="CENTER" />
+        </StackPane>
+      </StackPane>
+    </AnchorPane>
+    <!--Time Series View-->
+    <AnchorPane prefHeight="-1.0" prefWidth="200.0" style="-fx-background-color: gainsboro;">
+      <Text rotate="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time Series View" translateX="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-45.0" AnchorPane.topAnchor="50.0" />
+      <fx:include fx:id="timeSeriesView" source="TimeSeriesView.fxml" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+    </AnchorPane>
+    <!--Correlogram View-->
+    <AnchorPane prefHeight="-1.0" prefWidth="200.0" style="-fx-background-color: gainsboro;">
+      <Text fontSmoothingType="GRAY" rotate="270.0" smooth="true" strikethrough="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Correlation View" translateX="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-45.0" AnchorPane.topAnchor="50.0" />
+      <fx:include fx:id="correlationView" source="Correlogram.fxml" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+    </AnchorPane>
+  </SplitPane>
   <Line endX="100.0" endY="200.0" startX="-100.0" startY="-100.0" style="-fx-stroke-dash-array: 5 5;" visible="false" />
   <Line endX="100.0" endY="100.0" startX="0.0" style="-fx-stroke-dash-array: 5 5;" visible="false" />
 </StackPane>
