--- a/src/Gui/Correlogram.fxml
+++ b/src/Gui/Correlogram.fxml
@@ -6,13 +6,13 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<VBox fx:id="correlogramView" prefHeight="326.9999000000025" prefWidth="1119.0" style="-fx-background-color: gainsboro;" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Visualization.CorrelogramController">
-  <StackPane fx:id="correlogramPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" style="/*-fx-background-color:white;*/" VBox.vgrow="ALWAYS" />
+<VBox fx:id="correlogramView" prefHeight="326.9999000000025" prefWidth="1119.0" style="-fx-background-color: gainsboro;" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.CorrelogramController">
+  <StackPane fx:id="correlogramPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" style="/*-fx-background-color:white;*/" VBox.vgrow="ALWAYS"/>
   <StackPane fx:id="legendPane" maxHeight="140.0" maxWidth="1.7976931348623157E308" prefHeight="140.0" prefWidth="-1.0" style="/*-fx-background-color:blue;*/" VBox.vgrow="NEVER">
     <Button cancelButton="false" contentDisplay="GRAPHIC_ONLY" defaultButton="false" graphicTextGap="0.0" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" onAction="#resetView" prefHeight="20.0" prefWidth="20.0" style=";" text="" translateX="-20.0" StackPane.alignment="BOTTOM_LEFT">
       <graphic>
         <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">
-          <Image url="@../Gui/img/glyphicons_214_resize_small.png" />
+          <Image url="@img/glyphicons_214_resize_small.png" />
         </ImageView>
       </graphic>
       <tooltip>
@@ -22,7 +22,7 @@
     <ToggleButton fx:id="linkWithTimeSeriesViewToggle" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" selected="true" text="" translateX="-20.0" translateY="-20.0" StackPane.alignment="BOTTOM_LEFT">
       <graphic>
         <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">
-          <Image url="@../Gui/img/glyphicons_050_link.png" />
+          <Image url="@img/glyphicons_050_link.png" />
         </ImageView>
       </graphic>
       <tooltip>
