--- a/src/Gui/TimeSeriesView.fxml
+++ b/src/Gui/TimeSeriesView.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.*?>
 <AnchorPane fx:id="timeSeriesPane" prefHeight="326.9999000000025" prefWidth="1022.0"
             style="-fx-background-color: gainsboro;" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1"
-            xmlns="http://javafx.com/javafx/2.2" fx:controller="Visualization.TimeSeriesViewController">
+            xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.TimeSeriesViewController">
     <!--The chart is added manually because classes with inheritance can't use XML injection (unless there's a special mechanism for that which I don't know) -->
     <Slider fx:id="detailSlider" blockIncrement="1.0" majorTickUnit="1.0" max="1.0" min="1.0"
             prefHeight="15.99999988079071" prefWidth="206.0" showTickLabels="false" showTickMarks="false"
@@ -26,7 +26,7 @@
         <graphic>
             <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true"
                        smooth="false">
-                <Image url="@../Gui/img/glyphicons_214_resize_small.png"/>
+                <Image url="@img/glyphicons_214_resize_small.png"/>
             </ImageView>
         </graphic>
         <tooltip>
