--- a/src/Gui/ComputationInputTab.fxml
+++ b/src/Gui/ComputationInputTab.fxml
@@ -84,7 +84,7 @@
       <Button id="unloadAllSetAButton" fx:id="unloadSelectedSetBButton" alignment="CENTER_LEFT" contentDisplay="LEFT" focusTraversable="false" font="$x2" graphicTextGap="0.0" mnemonicParsing="false" onAction="#unloadSelected" prefWidth="89.0" text="selected" />
     </HBox>
   </VBox>
-  <Label alignment="CENTER_LEFT" prefWidth="544.0" text="Handle NaN Values" GridPane.columnIndex="6" GridPane.rowIndex="0" />
+  <Label alignment="CENTER_LEFT" prefWidth="544.0" text="Handle NaN Values" GridPane.columnIndex="7" GridPane.rowIndex="0" />
   <Label alignment="CENTER_LEFT" prefWidth="544.0" text="Limits" underline="false" visible="false" GridPane.columnIndex="5" GridPane.rowIndex="0" />
   <GridPane GridPane.columnIndex="5" GridPane.rowIndex="1">
     <columnConstraints>
@@ -118,7 +118,25 @@
     </Label>
     <TextField fx:id="timeLagMaxText" alignment="TOP_RIGHT" prefWidth="45.0" text="100" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
   </GridPane>
-  <BorderPane prefHeight="103.0" prefWidth="180.0" GridPane.columnIndex="6" GridPane.rowIndex="1">
+  <GridPane GridPane.columnIndex="6" GridPane.rowIndex="1">
+    <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="118.0" minWidth="8.0" prefWidth="48.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="73.0" minWidth="30.0" prefWidth="52.0" />
+    </columnConstraints>
+    <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    </rowConstraints>
+    <Label contentDisplay="RIGHT" text="p value" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="0">
+      <tooltip>
+        <Tooltip text="The level of significance when testing on significant correlation values (usually 0.05 = 5% or 0.01 = 1%)." />
+      </tooltip>
+    </Label>
+    <TextField id="significanceLevel" fx:id="significanceLevelText" alignment="TOP_RIGHT" prefWidth="45.0" text="0.05" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+  </GridPane>
+  <BorderPane prefHeight="103.0" prefWidth="180.0" GridPane.columnIndex="7" GridPane.rowIndex="1">
     <bottom>
       <Button id="openFileButton" fx:id="runButton" alignment="BOTTOM_CENTER" cancelButton="false" defaultButton="true" disable="true" focusTraversable="true" font="$x2" mnemonicParsing="false" onAction="#compute" prefHeight="18.0" prefWidth="130.0" text="Run" textAlignment="LEFT" wrapText="false" BorderPane.alignment="CENTER" />
     </bottom>
@@ -149,6 +167,7 @@
     <ColumnConstraints hgrow="ALWAYS" maxWidth="101.0" minWidth="100.0" prefWidth="63.0" />
     <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="-1.0" />
     <ColumnConstraints maxWidth="543.0" minWidth="150.0" prefWidth="200.0" />
+    <ColumnConstraints maxWidth="543.0" minWidth="100.0" prefWidth="100.0" />
     <ColumnConstraints maxWidth="543.0" minWidth="150.0" prefWidth="200.0" />
   </columnConstraints>
   <rowConstraints>
