--- a/src/Gui/MainWindow.fxml
+++ b/src/Gui/MainWindow.fxml
@@ -4,10 +4,9 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Text?>
 <StackPane minHeight="600.0" minWidth="800.0" prefHeight="768.0" prefWidth="1024.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.MainWindowController">
-  <SplitPane dividerPositions="0.1919060052219321, 0.5757180156657964" focusTraversable="true" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
+  <SplitPane dividerPositions="0.1762402088772846, 0.4765013054830287" focusTraversable="true" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
     <AnchorPane fx:id="inputPane" minHeight="0.0" prefHeight="144.0" prefWidth="1022.0" style="-fx-background-color: gainsboro;">
       <Text layoutX="-39.0" layoutY="55.0" rotate="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Input Selection" translateX="0.0" />
       <StackPane minHeight="0.0" prefHeight="165.0" visible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -19,7 +18,7 @@
             <fx:include fx:id="computationInput" source="ComputationInputTab.fxml" alignment="TOP_LEFT" />
           </Tab>
           <Tab text="Computation Output">
-              <fx:include fx:id="computationOutput" source="ComputationOutputTab.fxml"/>
+            <fx:include fx:id="computationOutput" source="ComputationOutputTab.fxml" />
           </Tab>
         </TabPane>
         <StackPane fx:id="progressPane" disable="false" minHeight="0.0" opacity="1.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: rgba(0,0,0,0.5);" visible="false">
@@ -40,8 +39,26 @@
     <AnchorPane prefHeight="-1.0" prefWidth="200.0" style="-fx-background-color: gainsboro;">
       <Text fontSmoothingType="GRAY" rotate="270.0" smooth="true" strikethrough="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Correlation View" translateX="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-45.0" AnchorPane.topAnchor="50.0" />
       <fx:include fx:id="correlationView" source="Correlogram.fxml" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <!--<ToggleButton id="linkWithTimeSeriesViewToggle" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" selected="true" text="" translateX="0.0" translateY="-20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">-->
+        <!--<graphic>-->
+          <!--<ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">-->
+            <!--<Image url="@img/glyphicons_050_link.png" />-->
+          <!--</ImageView>-->
+        <!--</graphic>-->
+        <!--<tooltip>-->
+          <!--<Tooltip text="Link horizontal zoom and pan with time series view" />-->
+        <!--</tooltip>-->
+      <!--</ToggleButton>-->
+      <!--<Button cancelButton="false" contentDisplay="GRAPHIC_ONLY" defaultButton="false" graphicTextGap="0.0" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" onAction="#resetView" prefHeight="20.0" prefWidth="20.0" style=";" text="" translateX="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">-->
+        <!--<graphic>-->
+          <!--<ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">-->
+            <!--<Image url="@img/glyphicons_214_resize_small.png" />-->
+          <!--</ImageView>-->
+        <!--</graphic>-->
+        <!--<tooltip>-->
+          <!--<Tooltip text="Reset correlogram view" />-->
+        <!--</tooltip>-->
+      <!--</Button>-->
     </AnchorPane>
   </SplitPane>
-  <Line endX="100.0" endY="200.0" startX="-100.0" startY="-100.0" style="-fx-stroke-dash-array: 5 5;" visible="false" />
-  <Line endX="100.0" endY="100.0" startX="0.0" style="-fx-stroke-dash-array: 5 5;" visible="false" />
 </StackPane>
